# OsiIpopt

./: .gitignore  .travis.yml  AUTHORS  Dependencies  INSTALL  Makefile.am  Makefile.in  README  README.md  acinclude.m4  compile.sh  configure  configure.ac  get_dependencies.sh  osiipopt-uninstalled.pc.in  osiipopt.pc.in
doxydoc/: doxygen.conf.in
examples/: Makefile.in  soco_solver.cpp
src/: Makefile.am  Makefile.in  OsiIpoptSolverInterface.cpp  OsiIpoptSolverInterface.hpp  OsiIpoptTNLP.cpp  OsiIpoptTNLP.hpp  config.h.in  config_osiipopt.h.in
